sort.basic.lessons.sort.basic.bubble.AlgBubbleSort1.scala.error
AlgBubbleSort1:15: error: reassignment to val
    compteur=variable
            ^